# nyaaup

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  README.md  __init__.py  __main__.py  changelog.md  config.yaml.example  install.py  install.sh  nyaaup.yaml.example  pyproject.toml
.github/workflows/: build.yaml  publish.yml
nyaaup/: __init__.py  auth.py  cli.py  nyaaup.py  nyaaup.yaml.example  torrent.py  up.py  upload.py  utils.py
nyaaup/utils/: __init__.py  argparse.py  auth.py  collections.py  databases.py  decorators.py  logging.py  mediainfo.py  regex.py  torrent.py  upload.py  uploader.py  userconfig.py
