[tool.poetry]
name = "nyaaup"
version = "3.3.4"
description = "Auto torrent uploader to Nyaa.si"
authors = ["varyg"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.28.1"
mal-api = "^0.5.2"
torf = "^4.0.4"
argparse = "^1.4.0"
pymediainfo = "^5.1.0"
langcodes = "^3.3.0"
wand = "^0.6.10"
pathlib = "^1.0.1"
platformdirs = "^2.5.2"
rich = "^12.6.0"
humanize = "^4.4.0"
bencode-py = "^4.0.0"
pymal = "^0.6"
ruamel-yaml = "^0.17.21"
language-data = "^1.1"
click = "^8.1.3"
pyoxipng = "^8.0.0"
httpx = "^0.26.0"
ruff = "^0.2.1"
tls-client = "^1.0.1"
typing-extensions = "^4.11.0"

[tool.poetry.scripts]
nyaaup = "nyaaup.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"